# kbdc

./: Cargo.toml
src/: main.rs  model.rs  read_dll.rs  to_yaml.rs
src/json_format/: json_model.rs  mod.rs
src/model/: keyboard_layer.rs  mod.rs  scan_codes.rs  virtual_keys.rs
