[package]
name = "kbdc"
version = "0.1.0"
edition = "2024"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse"
]