[package]
name = "kbdc"
version = "0.1.0"
edition = "2024"

[dependencies]
bimap = "0.6.3"
lazy_static = "1.4.0"
serde_json = "1.0.140"

[dependencies.serde]
version = "1.0.219"
features = [ "derive" ]

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse"
]